--- a/monoQuiz/src/assets/globals.scss
+++ b/monoQuiz/src/assets/globals.scss
@@ -1,5 +1,59 @@
- $primary-color: #d9803e;
- $secondary-color: #df7c13;
- $third-color: #5d79ae;
- $font-stack: 'Orbitron', 'sans-serif';
+ @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
+ 
+ $primary-color: #fff;
+ $secondary-color: #f6f7f9;
+ $third-color: #0723ce;
+ $font-stack: 'Circular Std', 'sans-serif';
  $border-radius: 10px;
+
+html,
+body {
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  overflow-x: hidden;
+}
+
+#app {
+  background-color: white;
+  height: inherit;
+  width: inherit;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: $font-stack;
+  font-size: clamp(0.8rem, 3.0vw, 2rem);
+  font-weight: 700;
+  color: black;
+  text-align: center;
+  margin-bottom: 25px;
+}
+
+p,
+a,
+td,
+pre,
+label {
+  font-size: clamp(0.8rem, 0.8vw, 1.8rem);
+  font-weight: 400;
+  font-family: $font-stack;
+  color: $third-color;
+  text-decoration: none;
+  text-shadow: 1px 1px 2px rgba(93, 121, 174, 0.4);
+
+}
+
+pre {
+  font-size: clamp(0.7rem, 0.8vw, 1.4rem);
+}
+
+th,
+td {
+  font-size: clamp(0.7rem, 2.2vw, 1.2rem);
+  font-family: $font-stack;
+}
