--- a/monoQuiz/src/assets/globals.scss
+++ b/monoQuiz/src/assets/globals.scss
@@ -29,7 +29,7 @@ h6 {
   font-family: $font-stack;
   font-size: clamp(0.8rem, 3.0vw, 2rem);
   font-weight: 700;
-  color: black;
+  color: $secondary-color;
   text-align: center;
   margin-bottom: 25px;
 }
@@ -42,7 +42,7 @@ label {
   font-size: clamp(0.8rem, 0.8vw, 1.8rem);
   font-weight: 400;
   font-family: $font-stack;
-  color: $third-color;
+  color: $primary-color;
   text-decoration: none;
   text-shadow: 1px 1px 2px rgba(93, 121, 174, 0.4);
 
