styling not yet done

--- a/monoQuiz/src/assets/countdown.scss
+++ b/monoQuiz/src/assets/countdown.scss
@@ -5,8 +5,8 @@
     max-width:80%;
     margin-bottom: 50px;
     div {
-        background-color:$third-color;
-        color:#fff;
+        background-color:$primary-color;
+        color: $text-color;
         display:inline-block;
         padding:2rem;
         margin: 0 1rem;
