--- a/monoQuiz/src/assets/form.scss
+++ b/monoQuiz/src/assets/form.scss
@@ -1,6 +1,6 @@
 
 .main-container {
-  background: $primary-color;
+  background-color: $primary-color;
   width: 900px;
   height: 550px;
   border-radius: 20px;
@@ -14,15 +14,18 @@
 
 /* --- FORM AREA --- */
 .form-wrapper {
+  margin: 1rem;
+  background-color: $primary-color;
+  border-radius: 1rem;
   width: 50%;
-  padding: 50px;
+  padding: 0px 50px 50px 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-.header h2 { color: var(--robot-dark); margin-bottom: 5px; }
-.header p { color: #b2bec3; font-size: 0.9rem; margin-bottom: 30px; }
+.header h2 { color: $primary-color; margin-bottom: 5px; }
+.header p { color: black; font-size: 0.9rem; margin-bottom: 30px; }
 
 .input-group { margin-bottom: 20px; position: relative; }
 .input-group label {
@@ -61,7 +64,8 @@
   margin-top: 10px;
 }
 .btn-submit:hover {
-  background: var(--primary);
+  background: $primary-color;
+  color: black;
   transform: translateY(-2px);
   box-shadow: 0 5px 15px rgba(79, 172, 254, 0.4);
 }
