--- a/monoQuiz/src/assets/globals.scss
+++ b/monoQuiz/src/assets/globals.scss
@@ -5,6 +5,7 @@
  $third-color: #0723ce;
  $font-stack: 'Circular Std', 'sans-serif';
  $border-radius: 10px;
+ $text-color: #2d2d2d;
 
 html,
 body {
@@ -29,7 +30,7 @@ h6 {
   font-family: $font-stack;
   font-size: clamp(0.8rem, 3.0vw, 2rem);
   font-weight: 700;
-  color: $secondary-color;
+  color: $text-color;
   text-align: center;
   margin-bottom: 25px;
 }
@@ -42,7 +43,7 @@ label {
   font-size: clamp(0.8rem, 0.8vw, 1.8rem);
   font-weight: 400;
   font-family: $font-stack;
-  color: $primary-color;
+  color: $text-color;
   text-decoration: none;
   text-shadow: 1px 1px 2px rgba(93, 121, 174, 0.4);
 
