More styling choices

--- a/monoQuiz/src/assets/countdown.scss
+++ b/monoQuiz/src/assets/countdown.scss
@@ -5,7 +5,7 @@
     max-width:80%;
     margin-bottom: 50px;
     div {
-        background-color:$primary-color;
+           background: linear-gradient(-67deg, rgba($third-color, .1), $secondary-color);
         color: $text-color;
         display:inline-block;
         padding:2rem;
