--- a/monoQuiz/src/assets/form.scss
+++ b/monoQuiz/src/assets/form.scss
@@ -22,6 +22,16 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  box-shadow: 0 8px 16px rgba($third-color, 0.2);
+
+  &:hover {
+     box-shadow: 0 12px 24px rgba($third-color, 0.35);
+     transform: translateX(1px);
+  }
+
+  li{
+    font-size: 1.2rem;
+  }
 }
 
 .header h2 { color: $primary-color; margin-bottom: 5px; }
