--- a/monoQuiz/src/assets/globals.scss
+++ b/monoQuiz/src/assets/globals.scss
@@ -39,13 +39,14 @@ p,
 a,
 td,
 pre,
-label {
+label,
+li {
   font-size: clamp(0.8rem, 0.8vw, 1.8rem);
   font-weight: 400;
   font-family: $font-stack;
   color: $text-color;
   text-decoration: none;
-  text-shadow: 1px 1px 2px rgba(93, 121, 174, 0.4);
+ 
 
 }
 
