--- a/monoQuiz/src/assets/form.scss
+++ b/monoQuiz/src/assets/form.scss
@@ -1,17 +1,4 @@
 
-.main-container {
-  background-color: $primary-color;
-  width: 900px;
-  height: 550px;
-  border-radius: 20px;
-  box-shadow: 0 15px 50px rgba(0,0,0,0.1);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  position: relative;
-}
-
 /* --- FORM AREA --- */
 .form-wrapper {
   margin: 1rem;
@@ -19,9 +6,6 @@
   border-radius: 1rem;
   width: 50%;
   padding: 0px 50px 50px 50px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   box-shadow: 0 8px 16px rgba($third-color, 0.2);
 
   &:hover {
@@ -34,8 +18,11 @@
   }
 }
 
+
+
 .header h2 { color: $primary-color; margin-bottom: 5px; }
 .header p { color: black; font-size: 0.9rem; margin-bottom: 30px; }
+
 
 .input-group { margin-bottom: 20px; position: relative; }
 .input-group label {
@@ -63,7 +50,7 @@
 .btn-submit {
   width: 100%;
   padding: 12px;
-  background: $third-color;
+  background-color: rgba($third-color, .7);
   color: white;
   border: none;
   border-radius: 8px;
@@ -74,8 +61,8 @@
   margin-top: 10px;
 }
 .btn-submit:hover {
-  background: $primary-color;
-  color: black;
+ background: linear-gradient(-67deg, rgba($third-color, .7), $secondary-color);
+  color: $primary-color;
   transform: translateY(-2px);
   box-shadow: 0 5px 15px rgba(79, 172, 254, 0.4);
 }
