--- a/monoQuiz/src/assets/teamlisting.scss
+++ b/monoQuiz/src/assets/teamlisting.scss
@@ -49,6 +49,7 @@
         
         .icon {
             transform: scale(1.1) rotate(5deg);
+            color: $primary-color;
         }
     }
     
@@ -164,6 +165,11 @@
     
     .icon {
         font-size: 36px;
+        -webkit-transition: color 3s;
+    -moz-transition:    color 3s;
+    -ms-transition:     color 3s;
+    -o-transition:      color 3s;
+    transition:         color 3s;
     }
 }
 
