--- a/monoQuiz/src/assets/navbar.scss
+++ b/monoQuiz/src/assets/navbar.scss
@@ -18,7 +18,7 @@
 }
 
 .nav-img{
-    background-image: url("https://www.monosolutions.com/uploads/qPdXJBxF/MonoLogo.svg");
+    background-image: url('https://www.monosolutions.com/uploads/qPdXJBxF/MonoLogo.svg');
     width: 90px;
   min-width: 80px;
   height: 60px;
@@ -36,23 +36,48 @@
     align-items: center;
 }
 
+.navbarMenu {
+    display: flex;
+    justify-content: center;
+    margin-right: 190px;
+    gap: 1rem;
+    width: 30%;
+    align-items: center;
+    background-color: rgba($primary-color, 0.65);
+    height: 100%;
+
+
+    button {
+    width: 30%;
+  padding: 12px;
+  background-color: rgba($primary-color, .7);
+  color: white;
+  border: none;
+  border-radius: 8px;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: 0.3s;
+        a {
+             &.active {
+                font-weight: bold;
+                color: black;
+                    }
+        }
+    }
+
+}
+
 .right-container{
     display: flex;
     justify-content: center;
     flex-basis: 30%;
     align-items: center;
     height: 70%;
- 
   padding: 16px 32px;
   border: none;
-  color: #a9b8c9;
   -webkit-appearance: none;
   transition: all 240ms ease-out;
   width: 100%;
-
-  p{
-    color: white;
-     text-shadow: 0 1px 3px rgba($third-color, 0.5);
-  }
 
 }
