--- a/monoQuiz/src/assets/teamlisting.scss
+++ b/monoQuiz/src/assets/teamlisting.scss
@@ -70,7 +70,7 @@
         text-align: center;
         font-size: 1.5rem;
         font-weight: 700;
-        color: $third-color;
+        color: $secondary-color;
         margin: 0 0 1rem 0;
         text-transform: uppercase;
         letter-spacing: 1px;
