--- a/monoQuiz/src/assets/teamlisting.scss
+++ b/monoQuiz/src/assets/teamlisting.scss
@@ -81,7 +81,7 @@
     font-size: 48px;
     width: 100%;
     text-align: center;
-    color: $third-color;
+    color: rgba($third-color, 0.5);
     margin-bottom: 1.5rem;
     transition: transform 0.3s ease;
     filter: drop-shadow(0 2px 4px rgba($third-color, 0.3));
