--- a/monoQuiz/src/assets/form.scss
+++ b/monoQuiz/src/assets/form.scss
@@ -4,7 +4,7 @@
   margin: 1rem;
   background-color: $primary-color;
   border-radius: 1rem;
-  width: 50%;
+  width: 480px;
   padding: 0px 50px 50px 50px;
   box-shadow: 0 8px 16px rgba($third-color, 0.2);
 
