--- a/monoQuiz/src/assets/navbar.scss
+++ b/monoQuiz/src/assets/navbar.scss
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height:clamp(50px,15vh,80px);
+    height:clamp(50px,100px,80px);
     background: linear-gradient(-67deg, rgba($third-color, .7), $secondary-color);
 
     .main{
@@ -45,7 +45,7 @@
     justify-content: center;
     margin-right: 190px;
     gap: 1rem;
-    width: 30%;
+    width: 570px;
     align-items: center;
     background-color: rgba($primary-color, 0.65);
     height: 100%;
