margin-right responsive with vw

--- a/monoQuiz/src/assets/navbar.scss
+++ b/monoQuiz/src/assets/navbar.scss
@@ -64,7 +64,7 @@
 .navbarMenu {
     display: flex;
     justify-content: center;
-    margin-right: 190px;
+    margin-right: 10vw;
     gap: 1rem;
     width: 570px;
     align-items: center;
