--- a/monoQuiz/src/assets/navbar.scss
+++ b/monoQuiz/src/assets/navbar.scss
@@ -70,9 +70,13 @@
     align-items: center;
     background-color: rgba($primary-color, 0.65);
     height: 100%;
+
+    @media (max-width: 1600px) {
+        margin-right: 7.5vw;
+    }
     
     @media (max-width: 1200px) {
-        margin-right: 50px;
+        margin-right: 5.5vw;
         width: auto;
         flex: 1;
         gap: 0.5rem;
