--- a/monoQuiz/src/assets/navbar.scss
+++ b/monoQuiz/src/assets/navbar.scss
@@ -72,7 +72,7 @@
     height: 100%;
 
     @media (max-width: 1600px) {
-        margin-right: 7.5vw;
+        margin-right: 95px;
     }
     
     @media (max-width: 1200px) {
