--- a/monoQuiz/src/assets/globals.scss
+++ b/monoQuiz/src/assets/globals.scss
@@ -1,9 +1,9 @@
- @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap');
  
  $primary-color: #fff;
  $secondary-color: #f6f7f9;
  $third-color: #0723ce;
- $font-stack: 'Circular Std';
+ $font-stack: 'Karla';
  $border-radius: 10px;
  $text-color: #2d2d2d;
 
