--- a/monoQuiz/src/assets/teamlisting.scss
+++ b/monoQuiz/src/assets/teamlisting.scss
@@ -92,8 +92,19 @@
     display: flex;
     flex-direction: column;
     gap: 0.75rem;
+
+    img {
+        width: 80%;
+        display: flex;
+        justify-content: center;
+    }
 }
 
+.images {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .team-listing-name {
     background: $primary-color;
     padding: 0.875rem 1rem;
